--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="article">
     <div class="well">
         <h1><a href="{{ site.baseurl}}{{ post.url }}"> {{ post.title }}</a></h1>
-        <h3>{{ post.date | date: "%b %-d, %Y" }}</h3>
+        <p>{{ post.date | date: "%b %-d, %Y" }}</p>
         {% if site.comments and post.comments %}
             {% if site.disqus != '' %}
             <p class="author"><a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread" data-disqus-identifier="{{ post.url | slugify }}">Comments</a></p>
