--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<link rel="stylesheet" type="text/css" href="css/theme.css">
 
 {% for post in paginator.posts %}
 <div class="article">
